[package]
name = "tiling-image-server"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
rocket = "0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
image = "0.24.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
toml = "0.5.8"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]