[package]
name = "gat-image-server"
version = "0.0.1"
publish = false
edition = "2021"

[dependencies]
rocket = "0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
image = "0.24.1"
toml = "0.5.8"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]